# mcp-bitbucket-dc

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml  skills-lock.json
.agents/skills/github-issues/: SKILL.md
.agents/skills/napkin/: SKILL.md
.github/workflows/: publish.yml  test.yml
src/mcp_bitbucket_dc/: __init__.py  client.py  config.py  formatting.py  models.py  server.py
src/mcp_bitbucket_dc/tools/: __init__.py  code_search.py  commits.py  files.py  projects.py  pull_requests.py  repositories.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_formatting.py
tests/integration/: test_smoke_live.py
tests/test_tools/: test_tool_modules.py
